[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Player/Parts/Body.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Player/Parts/Head.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0416

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_mask = 54
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
walk_speed = 620

[node name="Body" type="Sprite" parent="."]
position = Vector2( 2, -8 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Head" type="Sprite" parent="Body"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="GunHoldPosition" type="Position2D" parent="."]
position = Vector2( -18, 22 )

[connection signal="earn_cash" from="." to="." method="_on_Player_earn_cash"]
[connection signal="get_hit" from="." to="." method="_on_Player_get_hit"]
